[package]
name = "baduhan"
version = "0.1.0"
edition = "2024"
description = "A fast, native Windows terminal with iTerm2-style tabs, splits, and embedded browser panes. Baduhan (պատուհան) is Armenian for window."
license = "MIT"
repository = "https://github.com/redswoop/baduhan"
keywords = ["terminal", "windows", "conpty", "emulator"]
categories = ["command-line-utilities"]

[dependencies]
alacritty_terminal = "0.26.0"
anyhow = "1.0.102"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.6.1"
portable-pty = "0.9.0"
webview2-com = "0.39.1"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_DirectWrite", "Win32_Graphics_Gdi", "Win32_Graphics_Dxgi_Common", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_HiDpi", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_JobObjects", "Win32_System_Com", "Win32_System_Registry", "Win32_System_Console", "Win32_System_Ole", "Win32_System_Diagnostics_Debug", "Win32_Graphics_Dwm", "Win32_System_SystemServices", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_Security", "Win32_Graphics_Imaging", "Win32_System_Com_StructuredStorage"] }
windows-core = "0.62"
windows-numerics = "0.3"

[build-dependencies]
embed-manifest = "1.5.0"

[profile.release]
lto = "thin"
strip = true
